# viabill_casestudy

./: LICENSE  README.md  pyproject.toml  requirements.txt  viabill.ipynb
data/06_models/: model_RF.pkl
models/: kmeans_customers_clusters.pkl
notebooks/: viabill.ipynb
src/viabill_case_study/: __init__.py  __main__.py  settings.py
