[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "viabill_case_study"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
viabill-case-study = "viabill_case_study.__main__:main"

[tool.kedro]
package_name = "viabill_case_study"
project_name = "viabill_case_study"
kedro_init_version = "0.19.8"
tools = [ "Linting", "Data Structure", "PySpark",]
example_pipeline = "False"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true
select = [ "F", "W", "E", "I", "UP", "PL", "T201",]
ignore = [ "E501",]

[project.entry-points."kedro.hooks"]

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "viabill_case_study.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
